# examine

./: Cargo.toml  README.md  io.github.cosmic_utils.Examine.json
i18n/cs/: examine.ftl
i18n/hu/: examine.ftl
i18n/uk/: examine.ftl
res/: io.github.cosmic_utils.Examine.desktop  io.github.cosmic_utils.Examine.metainfo.xml
src/: app.rs
