[package]
name = "examine"
version = "1.0.0"
edition = "2024"

[dependencies]
etc-os-release = { git = "https://github.com/gifnksm/etc-os-release", features = ["url", "date"] }
futures-util = "0.3"
i18n-embed-fl = "0.10"
itertools = "0.14"
env_logger = "0.11"
log = "0.4"
open = "5.3"
rust-embed = "8.11.0"
tokio = { version = "1.49", features = ["full"] }
url = "2.5"

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit", "wayland", "about"]

[features]
default = ["dbus-config", "wgpu", "xdg-portal"]
wgpu = ["libcosmic/wgpu"]
dbus-config = ["libcosmic/dbus-config"]
xdg-portal = ["libcosmic/xdg-portal"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
